<resources>
    <string name="ga_trackingId">UA-32219612-5</string>
    <string name="com.kms.KisMainActivity">Main</string>
    <string name="com.kms.issues.KisIssuesActivity">Issues</string>
    <string name="com.kms.additional.gui.AboutActivity">About</string>
    <string name="com.kaspersky.kts.gui.wizard.WizardActivity">Wizard</string>
    <string name="com.kms.call.CallBlockerActivity">USSD Call block</string>
    <string name="com.kms.ipm.gui.ShowIpmMessageActivity">Ipm news</string>
    <string name="com.kms.gui.KMSEnterCodeActivity">Enter Secret Code</string>
    <string name="com.kms.gui.KMSHelpActivity">Help</string>
    <string name="com.kms.rateus.gui.KMSRateUsActivity">Rate us activity</string>
    <string name="com.kms.antivirus.gui.AvScanFilesActivity">Antivirus start scanning</string>
    <string name="com.kms.antivirus.gui.AvScanResultActivity">Antivirus scan results</string>
    <string name="com.kms.antivirus.gui.AvSelectFolderActivity">Antivirus select folder</string>
    <string name="com.kms.antivirus.gui.AvUserActionActivity">Virus found</string>
    <string name="com.kms.selfprotection.gui.UninstallActivity">Uninstall activity</string>
    <string name="com.kms.antispam.gui.AntiSpamListActivity">Antispam show list</string>
    <string name="com.kms.antispam.gui.AntiSpamListItemActivity">Antispam input item</string>
    <string name="com.kms.antispam.gui.AntiSpamItemAlreadyExistsActivity">Antispam already exists</string>
    <string name="com.kms.antispam.gui.AntiSpamUserActionActivity">AntiSpam incoming call/sms</string>
    <string name="com.kms.gui.antiphishing.SmsAskUserActivity">Antiphishing SmsAskUserActivity</string>
    <string name="com.kms.privacyprotection.gui.FakeActivity">Privacy protection fake</string>
    <string name="com.kms.privacyprotection.gui.PrivacyProtectionActivity">Privacy Protection switch</string>
    <string name="com.kms.privacyprotection.gui.PPContactsActivity">Privacy Protection contacts</string>
    <string name="com.kms.antitheft.gui.BlockTextActivity">Antitheft input block text</string>
    <string name="com.kms.antitheft.gui.EmailActivity">Antitheft edit email</string>
    <string name="com.kms.antitheft.gui.PhoneNumberActivity">Antitheft edit phone</string>
    <string name="com.kms.antitheft.gui.DeviceAdminLockScreenActivity">Lock screen</string>
    <string name="com.kms.antitheft.gui.LockInfoActivity">Antitheft LockInfoActivity</string>
    <string name="com.kaspersky.kts.antitheft.photo.CameraPreview">Antitheft CameraPreview</string>
    <string name="com.kms.updater.gui.UpdateActivity">Update bases activity</string>
    <string name="com.kms.updater.gui.KMSConfirmUpdateActivity">KMSConfirmUpdateActivity</string>
    <string name="com.kms.activation.gui.LicenseInfoActivity">License info</string>
    <string name="com.kms.activation.gui.EnterCodeActivity">Activation input activation code</string>
    <string name="com.kms.activation.gui.InternetConnectionRequiredActivity">No internet required</string>
    <string name="com.kms.activation.gui.RenewalValidationFormActivity">Activation Renewal Validation</string>
    <string name="com.kms.antispam.gui.CallListActivity">AntiSpam recent call list</string>
    <string name="com.kms.antispam.gui.ImportSMSNumberActivity">AntiSpam sms history</string>
    <string name="com.kaspersky.kts.gui.settings.SettingsMainActivity">Settings</string>
    <string name="com.kaspersky.kts.gui.settings.panels.AdditionalDetailPanel">Additional settings</string>
    <string name="com.kaspersky.kts.gui.settings.panels.ReportsDetailPanel">Reports</string>
    <string name="com.kaspersky.kts.gui.settings.panels.AntiPhishingDetailPanel">AntiPhishing settings</string>
    <string name="com.kaspersky.kts.gui.settings.panels.AntivirusDetailPanel">Antivirus settings</string>
    <string name="com.kaspersky.kts.gui.settings.panels.AntivirusMonitorDetailPanel">Antivirus monitor settings</string>
    <string name="com.kaspersky.kts.gui.settings.panels.AntivirusQuarantineDetailPanel">Quarantine settings</string>
    <string name="com.kaspersky.kts.gui.settings.panels.AntivirusScanDetailPanel">Scan settings</string>
    <string name="com.kaspersky.kts.gui.settings.panels.AntivirusUpdateDetailPanel">Antivirus update settings</string>
    <string name="app_name">Kaspersky Internet Security</string>
    <string name="app_name_short">Internet Security</string>
    <string name="str_antithieft_password_recovery_url">https://my.kaspersky.com/repass</string>
    <string name="facebook_app_id">616118308429957</string>
    <string name="kis_menu_scan">Scan</string>
    <string name="kis_menu_scan_cancel">Cancel scan</string>
    <string name="kis_menu_update_cancel">Cancel update</string>
    <string name="kis_menu_update">Update</string>
    <string name="kis_menu_safe_browser">Browser</string>
    <string name="kis_menu_show_info">Privacy Protection</string>
    <string name="kis_menu_call_sms_status">Call &amp; Text Filter</string>
    <string name="kis_menu_anti_theft_portal">Anti-Theft</string>
    <string name="kis_menu_settings">Settings</string>
    <string name="kis_menu_help">Help</string>
    <string name="kis_menu_share">Share</string>
    <string name="kis_menu_premium">Premium features</string>
    <string name="kis_shield_label_smartphone_protected">Device is protected ></string>
    <string name="kis_shield_label_1_problem_found">%1$d issue ></string>
    <string name="kis_shield_label_few_problems_found">%1$d issues ></string>
    <string name="kis_shield_label_many_problems_found">%1$d issues ></string>
    <string name="kis_shield_label_scan_running">Scanning... ></string>
    <string name="kis_issues_free_license">Free version</string>
    <string name="kis_issues_trial_license_one">Trial version, %1$d day left</string>
    <string name="kis_issues_trial_license_few">Trial version, %1$d days left</string>
    <string name="kis_issues_trial_license_many">Trial version, %1$d days left</string>
    <string name="kis_issues_premium_license_one">Premium version, %1$d day left</string>
    <string name="kis_issues_premium_license_few">Premium version, %1$d days left</string>
    <string name="kis_issues_premium_license_many">Premium version, %1$d days left</string>
    <string name="kis_issues_premium_license_subscription">Premium version, subscription</string>
    <string name="kis_issues_license_info_expired">The license info is outdated. Please check the Internet connection.</string>
    <string name="kis_issues_license_not_active">Subscription paused, please contact your provider.</string>
    <string name="kis_issues_license_info_expiring_1_day">Your license will expire in %1$d day.</string>
    <string name="kis_issues_license_info_expiring_few_days">Your license will expire in %1$d days.</string>
    <string name="kis_issues_license_info_expiring_many_days">Your license will expire in %1$d days.</string>
    <string name="kis_issues_license_description_free">You are using the free version</string>
    <string name="kis_issues_license_description_trial">You are using the trial version</string>
    <string name="kis_issues_license_description_premium">You are using the premium version</string>
    <string name="kis_issues_license_expiration_date">Expires: %s</string>
    <string name="kis_issues_license_days_remaining">Days left: %s</string>
    <string name="kis_issues_license_key">Key: %s</string>
    <string name="kis_issues_license_device_id">Device ID: %s</string>
    <string name="kis_enter_code_erase_button">Erase</string>
    <string name="str_scan_results_scanned_obj">Objects scanned:</string>
    <string name="str_scan_results_viruses_found">Threats detected:</string>
    <string name="str_scan_results_viruses_deleted">Neutralized:</string>
    <string name="str_scan_results_viruses_cured">Disinfected:</string>
    <string name="str_scan_results_viruses_quarantined">Quarantined:</string>
    <string name="str_scan_results_scan_time">Scan time:</string>
    <string name="str_license_settings_blocked_title">The activation code is blocked</string>
    <string name="str_license_settings_blocked_license_info"><u>License details</u></string>
    <string name="str_license_settings_blocked_subtitle">You are using the free version.</string>
    <string name="str_license_settings_blocked_dont_show">Do not show again</string>
    <string name="str_license_settings_support">Contact Support</string>
    <string name="str_license_setting_activation_enter_code_title">Enter the activation code</string>
    <string name="str_license_setting_activation_enter_code_subtitle">You receive this activation code when you purchase a license.</string>
    <string name="str_license_setting_activation_enter_code_hint">Enter the code here</string>
    <string name="str_license_setting_activation_enter_code_example">Example: XXXXX-XXXXX-XXXXX-XXXXX</string>
    <string name="str_license_setting_activation_enter_code_continue">Continue</string>
    <string name="str_license_title">About license</string>
    <string name="str_license_close_button">Close</string>
    <string name="str_license_serial_number">Key:</string>
    <string name="str_license_start_date">Starts:</string>
    <string name="str_license_type">License:</string>
    <string name="str_license_expire_date">Expires on:</string>
    <string name="str_license_days_left">Days left:</string>
    <string name="str_license_device_id">Device ID:</string>
    <string name="str_activation_incorrect_code">Incorrect activation code. Please check the characters you entered.</string>
    <string name="str_enter_code">Enter secret code:</string>
    <string name="str_enter_code_digit_0">0</string>
    <string name="str_enter_code_digit_1">1</string>
    <string name="str_enter_code_digit_2">2</string>
    <string name="str_enter_code_digit_3">3</string>
    <string name="str_enter_code_digit_4">4</string>
    <string name="str_enter_code_digit_5">5</string>
    <string name="str_enter_code_digit_6">6</string>
    <string name="str_enter_code_digit_7">7</string>
    <string name="str_enter_code_digit_8">8</string>
    <string name="str_enter_code_digit_9">9</string>
    <string name="str_enter_code_menu">Menu</string>
    <string name="str_enter_code_enter">Enter</string>
    <string name="str_app_version">Version: %s</string>
    <string name="str_app_copyright">© 2014 Kaspersky Lab ZAO. All Rights Reserved</string>
    <string name="str_eula_title">End User License Agreement</string>
    <string name="str_about_show_3rd_code_button">Third-party code</string>
    <string name="str_enter_code_current_code_info">Your secret code is:</string>
    <string name="str_activation_provide_current_code_checkbox">I have an old activation code</string>
    <string name="kts_str_about_trademark_notification_title">Trademark notices</string>
    <string name="kts_str_about_trademark_notification_body">"Registered trademarks and service marks are the exclusive property of their respective owners. 
Android and Google are trademarks of Google, Inc."</string>
    <string name="kts_str_app_description">"Kaspersky Internet Security provides protection against viruses and other malware, scans all files on the device, and neutralizes detected threats. Kaspersky Internet Security helps prevent your private data from being stolen online, such as theft of your online banking or payment system passwords. If your device is lost or stolen, Kaspersky Internet Security will help you locate your device and keep your data secure.
Contact Kaspersky Lab with any questions (http://www.kaspersky.com, http://support.kaspersky.com/helpdesk.html).

The digital signature is verified by Crypto-C-2.0, (C) CryptoEx LLX http://www.cryptoex.ru."</string>
    <string name="str_enter_recovery_code_subtitle">The recovery code safely recovers the secret code of the app. You can obtain the recovery code by signing in to Web Management with your Kaspersky Account.</string>
</resources>