<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/ScrollView01" android:background="@drawable/bg" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:id="@id/showCurrentPasswordLayout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="19.0sp" android:textStyle="bold" android:textColor="#ff7f7f7f" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_enter_code_current_code_info" />
            <TextView android:textSize="20.0sp" android:textColor="#ff7f7f7f" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/currentPassword" android:paddingTop="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="TextView" />
        </LinearLayout>
        <TextView android:textSize="20.0sp" android:textColor="#ff7f7f7f" android:gravity="center_horizontal" android:id="@id/TextEnterCode" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/str_enter_code" />
        <TextView android:textSize="14.0sp" android:textColor="#ff7f7f7f" android:gravity="center" android:id="@id/TextEnterCodeInfo" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/str_enter_recovery_code_subtitle" />
        <LinearLayout android:id="@id/LinearLayout04" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <EditText android:gravity="center_horizontal" android:id="@id/CodeText" android:background="@drawable/enter_code_selector" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:maxLines="1" android:maxLength="16" android:digits="0123456789" android:layout_weight="95.0" android:inputType="textPassword" />
            <LinearLayout android:id="@id/LinearLayout02" android:background="@drawable/f_right_nofocus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip">
                <ImageButton android:id="@id/EraseBtn" android:tag="10" android:background="@drawable/enter_code_button_selector_kts" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="1.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="10.0dip" android:contentDescription="@string/kis_enter_code_erase_button" />
            </LinearLayout>
        </LinearLayout>
        <TableLayout android:id="@id/TableLayout01" android:layout_width="fill_parent" android:layout_height="wrap_content" android:stretchColumns="1">
            <TableRow android:id="@id/TableRow01" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="99.0">
                <Button android:id="@id/Button01" android:tag="1" android:layout_marginRight="10.0dip" android:text="@string/str_enter_code_digit_1" android:layout_weight="33.0" style="@style/EnterCodeBtn" />
                <Button android:id="@id/Button02" android:tag="2" android:layout_marginRight="10.0dip" android:text="@string/str_enter_code_digit_2" android:layout_weight="33.0" style="@style/EnterCodeBtn" />
                <Button android:id="@id/Button03" android:tag="3" android:text="@string/str_enter_code_digit_3" android:layout_weight="33.0" style="@style/EnterCodeBtn" />
            </TableRow>
            <TableRow android:id="@id/TableRow02" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="99.0">
                <Button android:id="@id/Button04" android:tag="4" android:layout_marginRight="10.0dip" android:text="@string/str_enter_code_digit_4" android:layout_weight="33.0" style="@style/EnterCodeBtn" />
                <Button android:id="@id/Button05" android:tag="5" android:layout_marginRight="10.0dip" android:text="@string/str_enter_code_digit_5" android:layout_weight="33.0" style="@style/EnterCodeBtn" />
                <Button android:id="@id/Button06" android:tag="6" android:text="@string/str_enter_code_digit_6" android:layout_weight="33.0" style="@style/EnterCodeBtn" />
            </TableRow>
            <TableRow android:id="@id/TableRow03" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="0.0dip" android:weightSum="99.0">
                <Button android:id="@id/Button07" android:tag="7" android:layout_marginRight="10.0dip" android:text="@string/str_enter_code_digit_7" android:layout_weight="33.0" style="@style/EnterCodeBtn" />
                <Button android:id="@id/Button08" android:tag="8" android:layout_marginRight="10.0dip" android:text="@string/str_enter_code_digit_8" android:layout_weight="33.0" style="@style/EnterCodeBtn" />
                <Button android:id="@id/Button09" android:tag="9" android:text="@string/str_enter_code_digit_9" android:layout_weight="33.0" style="@style/EnterCodeBtn" />
            </TableRow>
            <TableRow android:id="@id/TableRow04" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="99.0">
                <Button android:id="@id/ButtonMenu" android:tag="11" android:paddingLeft="0.0dip" android:paddingRight="0.0dip" android:layout_marginRight="10.0dip" android:text="@string/str_enter_code_menu" android:layout_weight="33.0" style="@style/EnterCodeBtn" />
                <Button android:id="@id/Button00" android:tag="0" android:layout_marginRight="10.0dip" android:text="@string/str_enter_code_digit_0" android:layout_weight="33.0" style="@style/EnterCodeBtn" />
                <Button android:id="@id/ButtonEnter" android:tag="12" android:paddingLeft="0.0dip" android:paddingRight="0.0dip" android:text="@string/str_enter_code_enter" android:layout_weight="33.0" style="@style/KTSEnterCodeBtnEnter" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>