<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:layout_width="wrap_content" android:layout_height="0.0dip" android:layout_weight="1.0" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:background="@drawable/license_settings_background" android:padding="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip">
        <TextView android:textSize="20.0sp" android:textColor="#ff000000" android:gravity="center|left" android:id="@id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/str_license_setting_activation_enter_code_title" />
        <TextView android:textSize="14.0sp" android:textColor="#ff606060" android:gravity="start" android:id="@id/subtitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_license_setting_activation_enter_code_subtitle" />
        <EditText android:textColor="#ff606060" android:gravity="start|center" android:id="@id/activation_code" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:hint="@string/str_license_setting_activation_enter_code_hint" android:inputType="textVisiblePassword|textCapCharacters|textNoSuggestions" />
        <TextView android:textSize="14.0sp" android:textColor="#ff606060" android:gravity="start" android:id="@id/help_text" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:text="@string/str_license_setting_activation_enter_code_example" />
        <TextView android:textSize="14.0sp" android:textColor="#ffff8080" android:gravity="start" android:id="@id/error_text" android:paddingLeft="10.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:text="@string/str_activation_incorrect_code" />
        <CheckBox android:textSize="14.0sp" android:textColor="#ff2a2a2a" android:gravity="center_vertical" android:id="@id/enter_old_code" android:paddingLeft="35.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:checked="false" android:button="@drawable/kts_dialog_checkbox" android:text="@string/str_activation_provide_current_code_checkbox" />
        <Button android:id="@id/action_button" android:layout_width="fill_parent" android:layout_marginTop="30.0dip" android:layout_marginBottom="0.0dip" android:text="@string/str_license_setting_activation_enter_code_continue" style="@style/KTSWizardButton" />
    </LinearLayout>
    <TextView android:layout_width="wrap_content" android:layout_height="0.0dip" android:layout_weight="1.0" />
</LinearLayout>