<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:custom="http://schemas.android.com/apk/res/com.kms.free">
    <com.kaspersky.kts.gui.controls.BoundedLinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" custom:boundedWidthInches="3">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/license_expired" />
        <TextView android:textSize="18.0sp" android:textColor="#ff000000" android:gravity="center" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/str_license_settings_blocked_title" />
        <TextView android:textSize="18.0sp" android:textColor="#ff303030" android:gravity="center" android:id="@id/license_info" android:padding="0.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_license_settings_blocked_license_info" style="@style/kis_license_info" />
        <TextView android:textSize="18.0sp" android:textColor="#ff000000" android:gravity="center" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/str_license_settings_blocked_subtitle" />
        <Button android:id="@id/contact_provider" android:layout_width="fill_parent" android:layout_margin="10.0dip" android:text="@string/str_license_settings_support" style="@style/KTSWizardButton" />
        <Button android:id="@id/hide_notification" android:layout_width="fill_parent" android:layout_margin="10.0dip" android:text="@string/str_license_settings_blocked_dont_show" style="@style/KTSWizardGreyButton" />
    </com.kaspersky.kts.gui.controls.BoundedLinearLayout>
</ScrollView>