<?xml version="1.0" encoding="utf-8"?>
<LinearLayout style="?kis_dialog"
  xmlns:a="http://schemas.android.com/apk/res/android">
    <include layout="@layout/alert_dialog_title" />
    <LinearLayout a:orientation="vertical" a:id="@id/dialog_content_linearlayout" a:layout_width="fill_parent" a:layout_height="0.0dip" a:layout_weight="1.0">
        <ScrollView a:id="@id/dialog_content_scrollview" a:clipToPadding="false" a:layout_width="fill_parent" a:layout_height="wrap_content">
            <LinearLayout a:gravity="left" a:orientation="vertical" a:layout_width="fill_parent" a:layout_height="wrap_content">
                <LinearLayout a:layout_width="fill_parent" a:layout_height="wrap_content">
                    <TextView a:id="@id/TextView02" a:text="@string/str_scan_results_scanned_obj" style="?kis_dialog_textview_left" />
                    <TextView a:id="@id/TextCheckedObjectsValue" style="?kis_dialog_textview_right" />
                </LinearLayout>
                <LinearLayout a:layout_width="fill_parent" a:layout_height="wrap_content" a:layout_marginBottom="20.0dip">
                    <TextView a:id="@id/TextVirusesDetected" a:text="@string/str_scan_results_viruses_found" style="?kis_dialog_textview_left" />
                    <TextView a:id="@id/TextVirusesDetectedValue" style="?kis_dialog_textview_right" />
                </LinearLayout>
                <LinearLayout a:layout_width="fill_parent" a:layout_height="wrap_content">
                    <TextView a:id="@id/TextVirusesDeleted" a:text="@string/str_scan_results_viruses_deleted" style="?kis_dialog_textview_left" />
                    <TextView a:id="@id/TextVirusesDeletedValue" style="?kis_dialog_textview_right" />
                </LinearLayout>
                <LinearLayout a:layout_width="fill_parent" a:layout_height="wrap_content">
                    <TextView a:id="@id/TextVirusesQuarantine" a:text="@string/str_scan_results_viruses_quarantined" style="?kis_dialog_textview_left" />
                    <TextView a:id="@id/TextFilesQuarantinedValue" style="?kis_dialog_textview_right" />
                </LinearLayout>
                <LinearLayout a:layout_width="fill_parent" a:layout_height="wrap_content" a:layout_marginBottom="20.0dip">
                    <TextView a:id="@id/TextVirusesCured" a:text="@string/str_scan_results_viruses_cured" style="?kis_dialog_textview_left" />
                    <TextView a:id="@id/TextVirusesCuredValue" style="?kis_dialog_textview_right" />
                </LinearLayout>
                <LinearLayout a:layout_width="fill_parent" a:layout_height="wrap_content">
                    <TextView a:id="@id/TextScanTime" a:text="@string/str_scan_results_scan_time" style="?kis_dialog_textview_left" />
                    <TextView a:id="@id/TextScanTimeValue" style="?kis_dialog_textview_right" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <include layout="@layout/alert_dialog_footer" />
</LinearLayout>